--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         Please enter your second number
     </label><br>
     <input id="number2" type="number"><br>
-    <button onclick="addingMachine()">Add numbers</button>
-    <button onclick="clear()">Clear</button>
+    <button type="button" onclick="addingMachine()">Add numbers</button>
+    <button type="button" onclick="clear()">Clear</button>
     <p id="output"></p>
 </form>
 
