--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </label><br>
     <input id="number2" type="number"><br>
     <button type="button" onclick="addingMachine()">Add numbers</button>
-    <button type="button" onclick="clear()">Clear</button>
+    <button type="button" onclick="clearMachine()">Clear</button>
     <p id="output"></p>
 </form>
 
